fix(input): adds missing padding & remove useless margin from clipboard

--- a/packages/ods/src/components/clipboard/src/components/ods-clipboard/ods-clipboard.scss
+++ b/packages/ods/src/components/clipboard/src/components/ods-clipboard/ods-clipboard.scss
@@ -45,7 +45,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-left: calc(input.$ods-input-actions-padding-right / 2);
     height: auto;
   }
 
